--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,11 @@ jobs:
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
 
-      - run: cargo install risc0-r0vm
+      - name: Install r0vm 
+        run: | 
+          wget https://github.com/risc0/risc0/releases/download/v1.2.0/cargo-risczero-x86_64-unknown-linux-gnu.tgz
+          tar xzvf cargo-risczero-x86_64-unknown-linux-gnu.tgz
+          echo "$PWD" >> $GITHUB_PATH
       - run: cargo build --verbose
       - run: cargo nextest run --profile ci --workspace
       - name: Upload test results to Codecov
@@ -71,7 +75,11 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
-      - run: cargo install risc0-r0vm
+      - name: Install r0vm 
+        run: | 
+          wget https://github.com/risc0/risc0/releases/download/v1.2.0/cargo-risczero-x86_64-unknown-linux-gnu.tgz
+          tar xzvf cargo-risczero-x86_64-unknown-linux-gnu.tgz
+          echo "$PWD" >> $GITHUB_PATH
       - name: Generate code coverage
         run: cargo llvm-cov --workspace --lib --lcov --output-path lcov.info -- --test-threads=1
       - name: Upload coverage to Codecov
