--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,10 +28,10 @@ jobs:
         mode:
           - file: Dockerfile 
             name: hyle
-            push_ar: true
+            push_ghcr: true
           - file: Dockerfile.dependencies
             name: hyle-dependencies
-            push_ar: false
+            push_ghcr: false
 
     name: ${{ matrix.mode.name }}
     steps:
@@ -60,7 +60,6 @@ jobs:
       - name: Docker Auth
         id: docker-auth
         uses: 'docker/login-action@v3'
-        if: ${{ matrix.mode.push_ar }}
         with:
           username: _json_key
           password: ${{ secrets.GOOGLE_CREDENTIALS }}
@@ -68,6 +67,7 @@ jobs:
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
+        if: ${{ matrix.mode.push_ghcr }}
         with:
           registry: ghcr.io
           username: ${{github.actor}}
@@ -79,6 +79,8 @@ jobs:
           push: true
           file: ${{ matrix.mode.file }} 
           context: .
+          build-args: |
+            DEP_IMAGE=ghcr.io/hyle-org/hyle-dep:docker_build_cache
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
