--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -12,6 +12,9 @@ rust-version = { workspace = true }
 sdk = { workspace = true, default-features = false, features = [
     "full-model",
 ] }
+model = { path = "../hyle-model", package = "hyle-model", default-features = false, features = [
+    "full",
+] }
 anyhow = "1.0.96"
 borsh = "1.5.5"
 serde = "1.0"
@@ -35,6 +38,8 @@ futures = { version = "0.3.31", optional = true }
 axum = { version = "0.8.1", optional = true }
 utoipa = { version = "5.3.1", optional = true }
 utoipa-axum = { version = "0.2.0", optional = true }
+bytes = "1.10.0"
+paste = "1.0.15"
 
 [features]
 rest = ["dep:reqwest"]
