--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -12,9 +12,6 @@ rust-version = { workspace = true }
 sdk = { workspace = true, default-features = false, features = [
     "full-model",
 ] }
-model = { path = "../hyle-model", package = "hyle-model", default-features = false, features = [
-    "full",
-] }
 anyhow = "1.0.96"
 borsh = "1.5.5"
 serde = "1.0"
@@ -30,7 +27,7 @@ bincode = { version = "1.3.3", optional = true }
 reqwest = { version = "0.12", features = ["json"], optional = true }
 
 # Tcp feature
-tokio = { version = "1.42.0", optional = true }
+tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
 tokio-util = { version = "0.7.13", optional = true }
 futures = { version = "0.3.31", optional = true }
 
@@ -38,12 +35,12 @@ futures = { version = "0.3.31", optional = true }
 axum = { version = "0.8.1", optional = true }
 utoipa = { version = "5.3.1", optional = true }
 utoipa-axum = { version = "0.2.0", optional = true }
-bytes = "1.10.0"
-paste = "1.0.15"
+bytes = { version = "1.10.0", optional = true }
+paste = { version = "1.0.15", optional = true }
 
 [features]
 rest = ["dep:reqwest"]
-tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures"]
+tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures", "dep:bytes", "dep:paste"]
 indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
 sp1 = ["dep:sp1-sdk", "dep:bincode"]
