--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -27,7 +27,7 @@ bincode = { version = "1.3.3", optional = true }
 reqwest = { version = "0.12", features = ["json"], optional = true }
 
 # Tcp feature
-tokio = { version = "1.42.0", optional = true }
+tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
 tokio-util = { version = "0.7.13", optional = true }
 futures = { version = "0.3.31", optional = true }
 
@@ -35,10 +35,12 @@ futures = { version = "0.3.31", optional = true }
 axum = { version = "0.8.1", optional = true }
 utoipa = { version = "5.3.1", optional = true }
 utoipa-axum = { version = "0.2.0", optional = true }
+bytes = { version = "1.10.0", optional = true }
+paste = { version = "1.0.15", optional = true }
 
 [features]
 rest = ["dep:reqwest"]
-tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures"]
+tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures", "dep:bytes", "dep:paste"]
 indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
 sp1 = ["dep:sp1-sdk", "dep:bincode"]
