--- a/.github/workflows/update_contracts_pr.yml
+++ b/.github/workflows/update_contracts_pr.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Récupère tout l'historique pour éviter les problèmes
+      - name: Install rzup
+        run: |
+          curl -L https://risczero.com/install | bash
+          rzup install
 
       - name: Run contract update command
         run: |
