--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,14 +76,8 @@ indexing_slicing = "warn"
 hyle-contract-sdk = { workspace = true, default-features = false, features = [
     "tracing",
 ] }
-staking = { workspace = true, default-features = false, features = [
-    "client",
-] }
-client-sdk = { workspace = true, features = [
-  "rest",
-    "tcp",
-    "indexer"
-] }
+staking = { workspace = true, default-features = false, features = ["client"] }
+client-sdk = { workspace = true, features = ["rest", "tcp", "indexer"] }
 hyle-model = { workspace = true, default-features = false, features = [
     "full",
     "sqlx",
@@ -112,7 +106,7 @@ axum = { version = "0.8.1", features = ["ws", "macros"] }
 axum-otel-metrics = { version = "0.10.0" }
 bytes = { version = "1.10.0" }
 clap = { version = "4.5.31", features = ["derive"] }
-config = { version = "=0.15.0", default-features = false, features = ["ron"] }
+config = { version = "=0.15.0", default-features = false, features = ["toml"] }
 futures = { version = "0.3.31" }
 hyle-contracts = { workspace = true }
 indexmap = { version = "2.7.1", features = ["serde"] }
@@ -124,7 +118,6 @@ paste = { version = "1.0.15" }
 prometheus = { version = "0.13.4" }
 quote = { version = "1.0.39" }
 rand = { version = "0.9" }
-ron = { version = "0.8.1" }
 sqlx = { version = "0.8.3", features = [
     "runtime-tokio",
     "postgres",
@@ -147,8 +140,13 @@ utoipa = { version = "5.3.1", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
 utoipa-axum = { version = "0.2.0" }
 testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
-keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
+keyring = { version = "3", features = [
+    "apple-native",
+    "windows-native",
+    "sync-secret-service",
+] }
 whoami = "1.5.2"
+toml = "0.8.20"
 
 [patch.crates-io]
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
