--- a/src/utils/conf_defaults.toml
+++ b/src/utils/conf_defaults.toml
@@ -44,7 +44,7 @@ solo = true
 # Stakers and their inigial stake.
 # Default conf has to be empty as config is additive
 # but if you copy the file you can add values like (e.g.):
-# stakers: { "node1": 1000, "node2": 1000 }
+# stakers: { "node1"= 1000, "node2"= 1000 }
 # All genesis node requires the same config here
 # Keys are all nodes “id”, and values are the stake amount for each one of them.
 stakers = {}
