--- a/src/utils/conf_defaults.toml
+++ b/src/utils/conf_defaults.toml
@@ -8,7 +8,7 @@ data_directory = "data_node"
 # Data availability module, which streams historical & new blocks.
 # If full node: server address for the DA layer, which streams historical & new blocks. It might be used by indexers.
 # If "None", this is instead the address to connect to.
-da_address = "127.0.0.1:4141"
+da_server_port = 4141
 
 # Rest API
 rest_server_port = 4321
@@ -20,6 +20,7 @@ tcp_server_port = 1414
 # Indexer
 run_indexer = true
 database_url = "postgres://postgres:postgres@localhost:5432/postgres"
+da_address = "127.0.0.1:4141"
 
 [p2p]
 # "FullValidator" runs a full node, "LaneManager" skips consensus, or "None" to disable most modules.
